# gltfRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Directory.Build.props  README.md  vcpkg.json
FileLoader/: CMakeLists.txt  GLTFLoader.cpp  GLTFLoader.h  SimpleLoader.cpp  SimpleLoader.h
MiniEngineCore/: AgilitySDK.cpp  CMakeLists.txt  EngineConfig.h  MiniTimer.cpp  MiniTimer.h  MiniWindow.cpp  MiniWindow.h  imgui.ini  resource.h  stdafx.h
RenderDX12/: CMakeLists.txt  D3DCamera.cpp  D3DCamera.h  D3DTimer.cpp  D3DTimer.h  D3DUtil.cpp  D3DUtil.h  DX12CommandList.cpp  DX12CommandList.h  DX12ConstantManager.cpp  DX12ConstantManager.h  DX12DDSManager.cpp  DX12DDSManager.h  DX12DescriptorHeap.cpp  DX12DescriptorHeap.h  DX12Device.cpp  DX12Device.h  DX12FrameBuffer.cpp  DX12FrameBuffer.h  DX12FrameResource.cpp  DX12FrameResource.h  DX12PSO.cpp  DX12PSO.h  DX12RayTracingManager.cpp  DX12RayTracingManager.h  DX12RenderGeometry.cpp  DX12RenderGeometry.h  DX12Resource.cpp  DX12Resource.h  DX12RootSignature.cpp  DX12RootSignature.h  DX12ShadowManager.cpp  DX12ShadowManager.h  DX12SwapChain.cpp  DX12SwapChain.h  DX12TextureManager.cpp  DX12TextureManager.h  DX12View.cpp  DX12View.h  RenderDX12.cpp  (+3 more)
Shaders/: Common.hlsl  Default.hlsl  LightingUtil.hlsl  RayTracing.hlsl  Shadows.hlsl
scripts/: bootstrap_vcpkg.bat  build.bat  build_msbuild.bat
